--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <h1>Mit første website</h1>
     <p>This is some text in a paragraph</p>
 
+    <input>
+    <button>OK</button>
+    <h3></h3>
+
     <script src="app.js"></script>
   </body>
 </html>
